Changes for prevent Google to mark email as spam

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -31,6 +31,7 @@ DATABASE_URL="mysql://root:pass@mariadb:3306/symfony_scaffold"
 
 ###> symfony/mailer ###
 MAILER_DSN=gmail+smtp://USERNAME:PASSWORD@587
+MAILER_EMAIL=USERNAME
 ###< symfony/mailer ###
 
 ###> symfony/google-mailer ###
