--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     default-province-id: '%env(DEFAULT_PROVINCE_ID)%'
+    mailer-email: '%env(MAILER_EMAIL)%'
 services:
     # default configuration for services in *this* file
     _defaults:
