Fix encrypt keys

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -39,6 +39,7 @@ MAILER_EMAIL=USERNAME
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 
-DEFAULT_PROVINCE_ID=52
-DEFAULT_TOWN=Melilla
-DEFAULT_POSTAL_CODE=52001
+###> Encrypt-Bundle ###
+HASH_KEY=UsLN^Dc6x9xP7n924NJoffw4$6p*9SNg#r0Qql#^bNusXh4dKU
+HASH_METHOD=AES-128-CBC
+###> Encrypt-Bundle ###
