--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -4,8 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    default-province-id: '%env(DEFAULT_PROVINCE_ID)%'
     mailer-email: '%env(MAILER_EMAIL)%'
+    hash-key: '%env(HASH_KEY)%'
+    hash-method: '%env(HASH_METHOD)%'
 services:
     # default configuration for services in *this* file
     _defaults:
