--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app-env: '%env(APP_ENV)%'
     mailer-email: '%env(MAILER_EMAIL)%'
     hash-key: '%env(HASH_KEY)%'
     hash-method: '%env(HASH_METHOD)%'
