Update for include Encrypt Bundle

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -40,7 +40,8 @@ MAILER_EMAIL=USERNAME
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
 
-###> Encrypt-Bundle ###
-HASH_KEY=UsLN^Dc6x9xP7n924NJoffw4$6p*9SNg#r0Qql#^bNusXh4dKU
-HASH_METHOD=AES-128-CBC
-###> Encrypt-Bundle ###
+###> iserranodev/encrypt-bundle ###
+ISD_ENCRYPT_HASH_KEY=vHPOEVpPbmjtEXulWlXSLOdUvBulFiUKvFLnaPlvplWXFwPnGe
+ISD_ENCRYPT_METHOD=AES-128-CBC
+ISD_ENCRYPT_IV=R196013prq0CFupU
+###< iserranodev/encrypt-bundle ###
